--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Publications</a></li>
 						<li><a href="#three">Presentations</a></li>
-						<li><a href="#four">Open-Source Softwares</a></li>
+						<li><a href="#four">Research</a></li>
+						<li><a href="#five">Softwares</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -54,7 +55,7 @@
 									<header class="major">
 										<h2>Read Only</h2>
 										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										template freebie by <a href="files/test.pdf">HTML5 UP</a>.</p>
 									</header>
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 								</div>
